@@ -1,13 +1,9 @@
 package com.icar.platform.config;
 
 import com.icar.platform.infrastructure.security.filter.JwtAuthenticationFilter;
-import com.icar.platform.infrastructure.security.service.CarWashDetailsService;
-import com.icar.platform.infrastructure.security.service.CustomerDetailsService;
-import com.icar.platform.infrastructure.security.utils.TokenGenerator;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpStatus;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
@@ -32,19 +28,24 @@ import java.util.List;
 @RequiredArgsConstructor
 public class SecurityConfig {
 
-    private final TokenGenerator tokenGenerator;
-    private final CustomerDetailsService customerDetailsService;
-    private final CarWashDetailsService carWashDetailsService;
+    private final JwtAuthenticationFilter jwtAuthenticationFilter;
 
     private static final String[] SWAGGER_WHITELIST = {
             "/v3/api-docs/**", "/swagger-ui.html", "/swagger-ui/**", "/webjars/**",
             "/swagger-resources/**", "/favicon.ico"
     };
 
-    public static final String[] AUTH_WHITELIST = {
-            "/api/v1/auth/**", "/api/v1/carwash/auth/**", "/api/v1/health", "/error", "/files/**",
+    public static final String[] PUBLIC_WHITELIST = {
+            "/api/v1/auth/**",
+            "/api/v1/carwash/auth/**",
+            "/api/v1/profile/subdomain/**",
+            "/api/v1/health",
+            "/error",
+            "/carwash/**",
+            "/ads/**",
+            "/api/v1/notifications/mercado-pago",
+            "/api/v1/mercado-pago/**",
     };
-
 
     @Bean
     public static PasswordEncoder passwordEncoder() {
@@ -58,19 +59,12 @@ public class SecurityConfig {
 
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
-        JwtAuthenticationFilter jwtAuthenticationFilter = new JwtAuthenticationFilter(
-                tokenGenerator,
-                customerDetailsService,
-                carWashDetailsService
-        );
-
         http
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .csrf(AbstractHttpConfigurer::disable)
                 .authorizeHttpRequests(auth -> auth
-                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
                         .requestMatchers(SWAGGER_WHITELIST).permitAll()
-                        .requestMatchers(AUTH_WHITELIST).permitAll()
+                        .requestMatchers(PUBLIC_WHITELIST).permitAll()
                         .anyRequest().authenticated()
                 )
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
@@ -80,21 +74,28 @@ public class SecurityConfig {
         return http.build();
     }
 
-
     @Bean
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of(
-                "http://192.168.3.8:5173"
+
+        configuration.setAllowedOriginPatterns(Arrays.asList(
+                "http://localhost:5173",
+                "http://app.localhost:5173",
+                "http://gestao.localhost:5173",
+                "http://*.localhost:5173",
+                "http://192.168.3.8:5173",
+                "https://1549acb017ff.ngrok-free.app",
+
+
+                "https://icarplus.com.br",
+                "https://www.icarplus.com.br",
+                "https://app.icarplus.com.br",
+                "https://gestao.icarplus.com.br",
+                "https://*.icarplus.com.br"
         ));
+
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        configuration.setAllowedHeaders(Arrays.asList(
-                "Authorization", "Content-Type", "X-Requested-With", "Accept", "Origin"
-        ));
-        configuration.setExposedHeaders(Arrays.asList(
-                "Authorization", "Content-Type", "Content-Disposition", "Access-Control-Allow-Origin",
-                "Access-Control-Allow-Credentials"
-        ));
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
         configuration.setMaxAge(3600L);
 
